implemented find news for countries

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="breaking_news">Breaking News</string>
     <string name="saved_news">Saved News</string>
     <string name="search_news">Search News</string>
+    <string name="profile_isCodeSaved">is code saved?</string>
+    <string name="countryCode">country code</string>
 </resources>
